--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO =mongodb+srv://bismarezaferdian:061995@cluster0.8kfrz.mongodb.net/bookingapp?retryWrites=true&w=majority
 
 JWT = 8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI=
+
+PORT=30000
