--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO =mongodb+srv://bismarezaferdian:061995@cluster0.8kfrz.mongodb.net/bookinga
 JWT = 8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI=
 
 PORT=8000
+# cek ongkir
+RAJAONGKIR_URL = "https://api.rajaongkir.com/starter"
+RAJAONGKIR_KEY = "ab76b98996e28a10c509b66f6ced839a"
